<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultslabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="5dp"
        android:text="@string/results"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerChronometer" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultslabelTextView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/wlabelTextView"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/wake"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/wtimeTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/wpercentTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lslabelTextView"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/lightsleep"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/lstimeTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/lspercentTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dslabelTextView"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/deepsleep"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/dstimeTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/dspercentTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/remlabelTextView"
                android:layout_width="115dp"
                android:layout_height="60dp"
                android:text="@string/rem"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/remtimeTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/rempercentTextView"
                android:layout_width="105dp"
                android:layout_height="60dp"
                android:text="@string/blank"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/recordButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:text="@string/recordButton"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/timerChronometer"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/blank"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton" />

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/seafoam_green"
        android:text="@string/resultsButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>